# agentlandos

./: .clauderules  .env.example  .env.example.secure  .gitignore  .gitmessage  .vercelignore  AGENTLAND_SAARLAND_REALTIME_CHECKLIST.md  ANALYSIS_REPORT.md  BEST_PRACTICE_AUDIT_REPORT.md  CLAUDE.md  CLAUDE_CODE_DIRECTIVE.md  CLAUDE_STARTUP_INSTRUCTIONS.md  CONNECTIVITY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REAL_TIME_FEATURES.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEVELOPMENT.md  EXECUTE_NOW.md  FEATURE_REAL_TIME_DATA.md  FINAL_DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  INSTANT_HELP_SYSTEM_COMPLETE.md  MOBILE_OPTIMIZATION_SUMMARY.md  PRODUCTION_VERIFICATION_CHECKLIST.md  PROFESSIONAL_REBRAND_COMPLETE.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  SAARLAND_DIGITAL_REVOLUTION.md  SECURITY_ASSESSMENT_CRITICAL.md  SETUP_CLAUDE_CODE.md  SETUP_OPENAI_API_KEY.md  SPEECH_RECOGNITION_FIX_SUMMARY.md  SUPABASE_CONFIGURATION_SUMMARY.md  VERCEL_DEPLOYMENT_GUIDE.md  agentland-saarland-rules.md  brand-book.md  bughunt.sh  (+21 more)
apps/api/: Dockerfile  pyproject.toml  requirements-security.txt  requirements.txt
apps/api/api/: health.py  saartasks.py
apps/api/app/: __init__.py  main.py  main_simple.py
apps/api/app/agents/: base_agent.py  enhanced_navigator_agent.py  navigator_agent.py  sub_agent.py
apps/api/app/api/: __init__.py  agents.py  agents_router.py  auth.py  cross_border.py  enhanced_agents.py  health.py  link_validation.py  performance.py  realtime.py  (+1 more)
apps/api/tests/: test_audit_log.py  test_health.py  test_saartasks.py
(+435 files in other folders)
